--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,6 @@
 
 ul {
 	list-style: none;
-	margin: 0;
-	padding-left: 0;
 	display: flex;
 }
 
@@ -20,73 +18,75 @@ a:hover {
 	color:#c7b299;
 }
 
+.section_background_first-block {
+	background: url("../img/first-block-image.jpg") no-repeat;
+}
+
 .first-block {
-	margin: auto 0;
 	min-height: 1025px;
-	width: 100%;
-	background: url("../img/slider.jpg") no-repeat;
 }
 
 .wrapper {
-	width: 100%;
+	
 }
 
 .container { 
-	display: flex;
-	justify-content: center;
-	margin: auto 0;
-	width: 90%;
+	margin: auto;
+	max-width: 1232px;
 }
 
 .header {
 	display: flex;
 	justify-content: space-between;
-	padding: 10px;
 	padding-top: 62px;
 	color: #fff;
-	
 	font-family: Helvetica;
 }
 
 .header-logo {
-	margin-left: 350px;
-	padding-right: 200px;
+	margin-left: 30px;
+	margin-right: auto;
 }
 
 .header-logo__img {
-	width: 64px;
+	width: 180px;
 	height: 56px;
 }
 
 .header-menu {
 	display: flex;
-	justify-content: space-between;
-
 }
 
 .header-menu__list {
-
+	margin-top: auto;
+	margin-bottom: auto;
 }
 
 .header-menu__item {
 	font-family: Montserrat;
-	padding: 30px;
-
+	margin-right: 30px;
 }
 
 .header-search {
 	display: flex;
-
+	justify-content: space-between;
+	width: 71px;
+	height: 26px;
+	margin-top: auto;
+	margin-bottom: auto;
+	margin-left: 64px;
 }
 
 .header-search__icon_shopping-basket {
 	width: 20px;
 	height: 25px;
-	background: url(/img/search.png);
+	background: url("../img/shopping-cart.png") no-repeat;
+	background-size: contain;
 }
 
 .header-search__icon_search {
 	width: 25px;
 	height: 25px;
-	background: url(/img/search.png);
+	background: url("../img/search.png") no-repeat;
+	background-size: contain;
 }
